# proxmox-node-source

./: .coverage  .gitignore  INSTALL.md  LICENSE  README.md  build-plugin.sh  extract-plugin.sh  plugin.yaml  proxmox-node-source.py  pyproject.toml  requirements.txt
tests/: __init__.py  conftest.py
tests/integration/: test_config_integration.py  test_full_execution.py
tests/unit/: test_config_parsing.py  test_connection.py  test_ip_extraction.py  test_node_fetching.py  test_node_filtering.py  test_output_formats.py
